# coding_tests

./: .gitignore  regular_checks_coding
catkin_ws/src/hello_world/: CMakeLists.txt  package.xml
catkin_ws/src/hello_world/src/hello_world/: CMakeLists.txt  main.cpp
cpp_pid_search/: main  main.cpp
cpp_thread_managers/: makefile
cpp_thread_managers/include/: thread_manager.h
cpp_thread_managers/scripts/: process1.sh  process2.sh  process3.sh
cpp_thread_managers/src/: main.cpp  thread_manager.cpp
pid_search/: CMakeLists.txt  makefile
pid_search/include/: utils.h
pid_search/src/: CMakeLists.txt  main.cpp  utils.cpp
smart_pointers/: makefile
smart_pointers/include/: Position.h
smart_pointers/src/: Position.cpp  main.cpp
testing/: README.md  makefile
testing/src/: main.cpp
threading/: makefile
threading/include/: mutex_int.h
threading/src/: main.cpp  mutex_int.cpp
unordered_maps/: makefile  test.sh  test_service.service  test_service.sh
unordered_maps/src/: fork_children.cpp  fork_one_child.cpp  get_pid.cpp  main.cpp  thread_better.cpp  thread_wrong.cpp
